--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ flate2 = "1.0.24"
 byteorder = "1.4.3"
 iter-read = "0.3.1"
 paste = "1.0.3"
-serde = "1.0.144"
-serde_derive = "1.0.144"
+quote = "1.0.21"
+
+[lib]
+proc-macro = true
